DS-565: Prevent wrapping around icon

--- a/docs-site/src/pages/pattern-lab/_patterns/50-pages/99999-bolt-dev-sandbox/styles/index.scss
+++ b/docs-site/src/pages/pattern-lab/_patterns/50-pages/99999-bolt-dev-sandbox/styles/index.scss
@@ -44,4 +44,8 @@
       height: 50vh;
     }
   }
+
+  .e-bolt-text-link {
+    display: flex; //If the link is very long prevent from wrapping around icon
+  }
 }
